--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": " https://deoge.github.io/oriental-mana",
+  "homepage": "https://DeOGe.github.io",
   "name": "oriental-mana",
   "version": "0.1.0",
   "private": true,
